<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mad.pawan.homework.computercalculator.mainpage"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/budget"
        android:id="@+id/textView_budget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editText_budgetinput"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/enter_dollar_amount"
        android:id="@+id/editText_budgetinput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/memory"
        android:id="@+id/textView_memory"
        android:layout_below="@+id/textView_budget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/storage"
        android:id="@+id/textView_storage"
        android:layout_below="@+id/textView_memory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_budget"
        android:layout_toEndOf="@+id/textView_memory"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/textView_memory"
        android:weightSum="1"
        android:layout_above="@+id/radioGroup_storage"
        android:id="@+id/radioGroup_memory">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb2"
            android:id="@+id/radioButton_2gb"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb4"
            android:id="@+id/radioButton_4gb"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb8"
            android:id="@+id/radioButton_8gb"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb16"
            android:id="@+id/radioButton_16gb"
            android:checked="false" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_storage"
        android:layout_toEndOf="@+id/textView_memory"
        android:orientation="horizontal"
        android:id="@+id/radioGroup_storage"
        android:layout_alignLeft="@+id/radioGroup_memory"
        android:layout_alignStart="@+id/radioGroup_memory">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb250"
            android:id="@+id/radioButton_250gb"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb500"
            android:id="@+id/radioButton_500gb"
            android:checked="false"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gb750"
            android:id="@+id/radioButton_750gb"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tb1"
            android:id="@+id/radioButton_1TB"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/accessories"
        android:id="@+id/textView_accessories"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView_storage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mouse"
        android:id="@+id/checkBox_mouse"
        android:checked="false"
        android:layout_alignBottom="@+id/textView_accessories"
        android:layout_alignLeft="@+id/editText_budgetinput"
        android:layout_alignStart="@+id/editText_budgetinput" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flashdrive"
        android:id="@+id/checkBox_flashdrive"
        android:checked="false"
        android:layout_above="@+id/checkBox_coolingpad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coolingpad"
        android:id="@+id/checkBox_coolingpad"
        android:checked="false"
        android:layout_below="@+id/checkBox_mouse"
        android:layout_alignLeft="@+id/checkBox_mouse"
        android:layout_alignStart="@+id/checkBox_mouse" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carryingcase"
        android:id="@+id/checkBox_carryingcase"
        android:checked="false"
        android:layout_below="@+id/checkBox_flashdrive"
        android:layout_alignLeft="@+id/checkBox_flashdrive"
        android:layout_alignStart="@+id/checkBox_flashdrive" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tips"
        android:id="@+id/textView_tip"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/checkBox_coolingpad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_tips"
        android:layout_alignBottom="@+id/textView_tip"
        android:layout_toRightOf="@+id/textView_budget"
        android:max="25"
        android:progress="15"
        android:indeterminate="false"
        android:layout_alignRight="@+id/radioGroup_memory"
        android:layout_alignEnd="@+id/radioGroup_memory" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_progress"
        android:layout_alignBottom="@+id/seekBar_tips"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/delivery"
        android:id="@+id/textView_delivery"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView_tip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_delivery"
        android:checked="true"
        android:layout_alignTop="@+id/textView_delivery"
        android:layout_toRightOf="@+id/textView_accessories"
        android:layout_toEndOf="@+id/textView_accessories"
        android:showText="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/button_calculate"
        android:layout_below="@+id/switch_delivery"
        android:layout_alignRight="@+id/switch_delivery"
        android:layout_alignEnd="@+id/switch_delivery" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/button_reset"
        android:layout_alignTop="@+id/button_calculate"
        android:layout_alignRight="@+id/radioGroup_storage"
        android:layout_alignEnd="@+id/radioGroup_storage"
        android:layout_toRightOf="@+id/checkBox_mouse"
        android:layout_toEndOf="@+id/checkBox_mouse" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/price"
        android:id="@+id/textView_price"
        android:layout_below="@+id/button_calculate"
        android:layout_toRightOf="@+id/textView_tip"
        android:layout_toEndOf="@+id/textView_tip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_pricevalue"
        android:text="@string/defaultprice"
        android:layout_alignTop="@+id/textView_price"
        android:layout_alignLeft="@+id/button_reset"
        android:layout_alignStart="@+id/button_reset" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/yourstatus"
        android:id="@+id/textView_yourstatus"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView_price"
        android:layout_alignEnd="@+id/textView_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_finalstatus"
        android:layout_alignBottom="@+id/textView_yourstatus"
        android:layout_alignLeft="@+id/textView_pricevalue"
        android:layout_alignStart="@+id/textView_pricevalue" />

</RelativeLayout>
